fix: LayoutShift 없이 hover 애니메이션이 일어나도록 수ㅇ

--- a/src/components/GifItem/GifItem.module.css
+++ b/src/components/GifItem/GifItem.module.css
@@ -41,6 +41,6 @@
 /* PC */
 @media all and (min-width:1080px) {
     .gifItem:hover {
-        top: -0.75rem;
+        transition: top 1s -0.75rem;
     }
 }
